rmd date update

--- a/03_introduce_tidyverse_package.html
+++ b/03_introduce_tidyverse_package.html
@@ -11,6 +11,7 @@
 
 <meta name="author" content="MinDong Sung" />
 
+<meta name="date" content="2021-04-09" />
 
 <title>03_tidyverse_package</title>
 
@@ -166,7 +167,7 @@ pre code {
 
 <h1 class="title toc-ignore">03_tidyverse_package</h1>
 <h4 class="author">MinDong Sung</h4>
-<h4 class="date">4/5/2021</h4>
+<h4 class="date">2021-04-09</h4>
 
 </div>
 
