--- a/00_pre_requisite.html
+++ b/00_pre_requisite.html
@@ -11,6 +11,7 @@
 
 <meta name="author" content="MinDong Sung" />
 
+<meta name="date" content="2021-04-09" />
 
 <title>Pre-requisite for R tutorial</title>
 
@@ -166,7 +167,7 @@ pre code {
 
 <h1 class="title toc-ignore">Pre-requisite for R tutorial</h1>
 <h4 class="author">MinDong Sung</h4>
-<h4 class="date">4/2/2021</h4>
+<h4 class="date">2021-04-09</h4>
 
 </div>
 
