update 00 prerequisite file

--- a/00_pre_requisite.html
+++ b/00_pre_requisite.html
@@ -218,6 +218,9 @@ renv::restore()</code></pre>
 </div>
 <div id="pre-requisite-packages" class="section level2">
 <h2>pre-requisite packages</h2>
+<ul>
+<li><code>renv::restore()</code> 를 실행시키신 경우에는 따로 다음 명령어를 실행시키실 필요는 없습니다.</li>
+</ul>
 <pre class="r"><code>install.packages(c(&#39;renv&#39;, &#39;rmarkdown&#39;, &#39;knitr&#39;))
 install.packages(c(&#39;tidyverse&#39;, &#39;tableone&#39;, &#39;ggsignif&#39;,&#39;cowplot&#39;, &#39;here&#39;, &#39;glue&#39;, &#39;datapasta&#39;))</code></pre>
 </div>
