--- a/20210702_developement_environment_setting/presentation/presentation.html
+++ b/20210702_developement_environment_setting/presentation/presentation.html
@@ -31,6 +31,8 @@ class: center, middle, inverse, title-slide
 
 - I own some stock in Microsoft.
 
+- 제가 하는 방식은 완벽하지 않으며, 반드시 이렇게 해야한다는 것은 아닙니다. 
+
 ---
 class: center, middle
 
@@ -117,13 +119,15 @@ cf. https://medium.com/harrythegreat/oh-my-zsh-iterm2%EB%A1%9C-%ED%84%B0%EB%AF%B
 * python
 * python jupyter
 * python integration shell(like jupyter) - #%%
+
 * 원격 접속 개발
   - ssh key 이용 시 password 없이 접속 가능 
+  
 * 여러가지 단축키
-  - alt + 위/아래
-  - alt + shift 위/아래
-  - ctrl + d - 같은 것 선택
-  - ctrl + / - 주석처리
+  - `alt` + `위`/`아래`
+  - `alt` + `shift` `위`/`아래`
+  - `ctrl`/`cmd` + `d` - 같은 것 선택
+  - `ctrl`/`cmd` + / - 주석처리
 
 ---
 class: center, middle
@@ -153,6 +157,8 @@ c.f. https://github.com/mdsung/2020_KISA_blockchain_survey
 
 ---
 # [R] Project 
+- 프로젝트별로 데이터 및 파일을 관리할 수 있어 여러 프로젝트를 동시에 진행할 때 organize하게 진행할 수 있다. 
+
 - library `here`
   - make your path absolute and unified based on the project folder
   
@@ -170,15 +176,78 @@ c.f. https://github.com/mdsung/2020_KISA_blockchain_survey
 - Save your dependencies in the txt file
   - `pip freeze &gt; requirements.txt`
   
+---
+# [R] R notebook or R markdown
+  - Rscript에서 작업을 많이 하지만, notebook이나 document를 이용하면, 기록하고 공유할 때 편하다.
+  - `output:` 여러가지 형태로 변환이 가능하다.
+      - html_notebook
+      - html_document
+      - github_document
+      - word_document
+      - pdf_document
 
+# [Python] Jupyter notebook
+  - `jupyter nbconvert` 
+  - 공유시 html 파일로 변환 후 공유하면 좀 더 편하다
 
+---
+# git / github
+- version 관리 프로그램
+- code 백업
+- (협업?)
+- project별로 repository를 구성하면 webpage에서 분석 결과를 쉽게 확인할 수 있다. 
+
+c.f. https://github.com/mdsung/2021_scRNA_PMBC_replicate
+
+---
+# `code` 관리
+- code는 하나의 일을 하는 것이 좋다 
+- naming은 항상 중요하다.
+
+  e.g. create_preprocess_dataset.R 
+  e.g. create_figure1.R
+  
+---
+# `data/processed` 관리
+- Use `feather` file
+  - `feather` format can be read in both R and Python.
+  - c.f `RDS` format is the way faster than `feather`.
+&lt;img src="figure/io_fileformat.svg" width="50%" style="display: block; margin: auto;" /&gt;
+.footnote[
+https://blog.dominodatalab.com/the-r-data-i-o-shootout/
+]
+---
+# .gitignore
+- github에 모든 파일을 올릴 수는 없다. 
+- data 특히 raw는 올리지 않을 것이 좋다. 
+- 민감한 정보를 분석할 때에는 code만 올리는 것을 고려
+- 예시)
+
+```bash
+env/
+data/raw/
+**/__pycache__/
+.DS_Store
+
+```
+---
+# github 기본 이용법
+- `git init` / `git clone`
+- `git add`
+- `git commit -m "first commit"`
+- `git push`
+- `git pull`
+
+---
+# Others...
+- `Makefile` - save your work process
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
 "ratio": "3508:2480",
 "highlightStyle": "github",
-"highlightLines": true,
+"highlightLines": false,
 "countIncrementalSlides": false
 });
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
@@ -245,24 +314,7 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
       links[i].target = '_blank';
     }
   }
-})();
-// adds .remark-code-has-line-highlighted class to <pre> parent elements
-// of code chunks containing highlighted lines with class .remark-code-line-highlighted
-(function(d) {
-  const hlines = d.querySelectorAll('.remark-code-line-highlighted');
-  const preParents = [];
-  const findPreParent = function(line, p = 0) {
-    if (p > 1) return null; // traverse up no further than grandparent
-    const el = line.parentElement;
-    return el.tagName === "PRE" ? el : findPreParent(el, ++p);
-  };
-
-  for (let line of hlines) {
-    let pre = findPreParent(line);
-    if (pre && !preParents.includes(pre)) preParents.push(pre);
-  }
-  preParents.forEach(p => p.classList.add("remark-code-has-line-highlighted"));
-})(document);</script>
+})();</script>
 
 <script>
 slideshow._releaseMath = function(el) {
