--- a/20210702_developement_environment_setting/presentation/20210702_presentation_development_environment_setting.html
+++ b/20210702_developement_environment_setting/presentation/20210702_presentation_development_environment_setting.html
@@ -37,13 +37,40 @@ class: center, middle, inverse, title-slide
 
 
 
-class: center, middle
+class: center, middle, inverse
 # Development Environment
+
+---
+class: center, middle
+# Wireless Lan
+---
+# YUHS-external
+- 그룹웨어 ID / Password 이용해서 접속 가능
+---
+## Connect to Print(for Mac)
+1. 윈도우 프린트 공유가 필요하고 **공유 위치(ip)**와 **공유 프린트 이름**이 필요하다.
+    - IP: 10.19.12.58
+    - Printer Name: Kyocera FS-4025DN KX
+1. smb://[IP address of Printer]로 접속하여 인증을 한다. 
+1. 프린트 추가 - 고급
+    - 유형: windows printer via spoolss
+    - 기기: 다른기기
+    - URL: smb://10.19.12.58/Kyocera%20FS-4025DN%20KX
+        - 빈칸에 **%20**을 입력한다.
+    - 사용은 소프트웨어가 있으면 좋겠지만 없으면 일반 postscript 프린트로 설정
+
+&lt;img src="figure/connect_to_network_printer.png" width="30%" style="display: block; margin: auto;" /&gt;
+---
+## Connect to PC (feat. Microsoft Remote Desktop)
+&lt;img src="figure/RDP_setting.png" width="80%" style="display: block; margin: auto;" /&gt;
+---
+## Connect to PC (feat. Microsoft Remote Desktop)
+&lt;img src="figure/RDP_desktop.png" width="100%" style="display: block; margin: auto;" /&gt;
 
 ---
 class: inverse, center, middle
 # Terminal
-
+# IDE(with VS Code)
 ---
 class: center, middle
 # Project Management
@@ -327,8 +354,8 @@ library(leaflet)
 leaflet() %&gt;% addTiles() %&gt;% setView(-93.65, 42.0285, zoom = 17)
 ```
 
-<div id="htmlwidget-6a36a8309ff7a7df8610" style="width:100%;height:432px;" class="leaflet html-widget"></div>
-<script type="application/json" data-for="htmlwidget-6a36a8309ff7a7df8610">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]}],"setView":[[42.0285,-93.65],17,[]]},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-cd54418dd18edd7ae3d9" style="width:100%;height:432px;" class="leaflet html-widget"></div>
+<script type="application/json" data-for="htmlwidget-cd54418dd18edd7ae3d9">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]}],"setView":[[42.0285,-93.65],17,[]]},"evals":[],"jsHooks":[]}</script>
 
 ---
 
@@ -340,8 +367,8 @@ DT::datatable(
 )
 ```
 
-<div id="htmlwidget-7ebcbc51910e53b9f225" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-7ebcbc51910e53b9f225">{"x":{"filter":"none","fillContainer":false,"data":[["1","2","3","4","5","6","7","8","9","10"],[5.1,4.9,4.7,4.6,5,5.4,4.6,5,4.4,4.9],[3.5,3,3.2,3.1,3.6,3.9,3.4,3.4,2.9,3.1],[1.4,1.4,1.3,1.5,1.4,1.7,1.4,1.5,1.4,1.5],[0.2,0.2,0.2,0.2,0.2,0.4,0.3,0.2,0.2,0.1],["setosa","setosa","setosa","setosa","setosa","setosa","setosa","setosa","setosa","setosa"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>Sepal.Length<\/th>\n      <th>Sepal.Width<\/th>\n      <th>Petal.Length<\/th>\n      <th>Petal.Width<\/th>\n      <th>Species<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":8,"columnDefs":[{"className":"dt-right","targets":[1,2,3,4]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[8,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-3fa3a3ce50322d4767ec" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-3fa3a3ce50322d4767ec">{"x":{"filter":"none","fillContainer":false,"data":[["1","2","3","4","5","6","7","8","9","10"],[5.1,4.9,4.7,4.6,5,5.4,4.6,5,4.4,4.9],[3.5,3,3.2,3.1,3.6,3.9,3.4,3.4,2.9,3.1],[1.4,1.4,1.3,1.5,1.4,1.7,1.4,1.5,1.4,1.5],[0.2,0.2,0.2,0.2,0.2,0.4,0.3,0.2,0.2,0.1],["setosa","setosa","setosa","setosa","setosa","setosa","setosa","setosa","setosa","setosa"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>Sepal.Length<\/th>\n      <th>Sepal.Width<\/th>\n      <th>Petal.Length<\/th>\n      <th>Petal.Width<\/th>\n      <th>Species<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":8,"columnDefs":[{"className":"dt-right","targets":[1,2,3,4]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[8,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
 
 ---
 
@@ -642,17 +669,18 @@ names(xaringan:::list_css())
 ```
 ##  [1] "chocolate-fonts"  "chocolate"        "default-fonts"   
 ##  [4] "default"          "duke-blue"        "fc-fonts"        
-##  [7] "fc"               "hygge-duke"       "hygge"           
-## [10] "ki-fonts"         "ki"               "kunoichi"        
-## [13] "lucy-fonts"       "lucy"             "metropolis-fonts"
-## [16] "metropolis"       "middlebury-fonts" "middlebury"      
-## [19] "nhsr-fonts"       "nhsr"             "ninjutsu"        
-## [22] "rladies-fonts"    "rladies"          "robot-fonts"     
-## [25] "robot"            "rutgers-fonts"    "rutgers"         
-## [28] "shinobi"          "tamu-fonts"       "tamu"            
-## [31] "uio-fonts"        "uio"              "uo-fonts"        
-## [34] "uo"               "uol-fonts"        "uol"             
-## [37] "useR-fonts"       "useR"
+##  [7] "fc"               "glasgow_template" "hygge-duke"      
+## [10] "hygge"            "ki-fonts"         "ki"              
+## [13] "kunoichi"         "lucy-fonts"       "lucy"            
+## [16] "metropolis-fonts" "metropolis"       "middlebury-fonts"
+## [19] "middlebury"       "nhsr-fonts"       "nhsr"            
+## [22] "ninjutsu"         "rladies-fonts"    "rladies"         
+## [25] "robot-fonts"      "robot"            "rutgers-fonts"   
+## [28] "rutgers"          "shinobi"          "tamu-fonts"      
+## [31] "tamu"             "uio-fonts"        "uio"             
+## [34] "uo-fonts"         "uo"               "uol-fonts"       
+## [37] "uol"              "useR-fonts"       "useR"            
+## [40] "uwm-fonts"        "uwm"
 ```
 
 ---
